# neuro_karaoke_demo

./: .gitignore  QUICKSTART.md  README.md  SETUP.md  example_usage.py  pyproject.toml  requirements.txt  setup.sh  streamlit_app.py  vocal_separator.py
src/neuro_karaoke/: __init__.py  audio_utils.py  separation.py  yandex_music_service.py
