[project]
name = "neuro-karaoke"
version = "0.1.0"
description = "Приложение для практики вокала с возможностью отделения вокала от инструментала"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "demucs>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

